2004-08-11  Satoru Takabayashi  <satoru@namazu.org>

 	* pdumpfs: Version 1.2 released.

	* pdumpfs.in (Pdumpfs::Pdumpfs::latest_snapshot): Use Date.valid_date?.
	(Pdumpfs::Pdumpfs::valid_date?): Removed.
	(File::safe_readlink): Removed.
	(Pdumpfs::FileMatcher::exclude?): Simplified. Don't rescue
	Errno:ENOENT in this method. 
	(Pdumpfs::Pdumpfs::update_snapshot): Rescue Errno::EACCES as well
	as Errno::ENOENT.
	(Pdumpfs::Pdumpfs::recursive_copy): Ditto.

2004-08-10  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (Pdumpfs::Pdumpfs::report): New method.
	(Pdumpfs::Pdumpfs::update_file): Use it.
	(Pdumpfs::Pdumpfs::recursive_copy): Ditto.
	(Pdumpfs::Pdumpfs::recursive_copy): Simplified using detect_type.
	(File::safe_readlink): New function.
	(File::anything_exist?): New function.
	(Pdumpfs::Pdumpfs::valid_date?): New method.
	(Pdumpfs::Pdumpfs::past?): New method.
	(Pdumpfs::Pdumpfs::datedir): Use File::SEPARATOR.
	(File::expand_special_folders): Ditto.
	(File::PdumpfsForm::get_exe_file_name): Ditto.
	(File::PdumpfsForm::get_program_file_name): Ditto.
	(Pdumpfs::Pdumpfs::start): Don't use Date.today any longer.
	(Pdumpfs::Pdumpfs::latest_snapshot): Take a new parameter: start_time.
	(Pdumpfs::Pdumpfs::make_relative_path): New method.
	(Pdumpfs::Pdumpfs::update_snapshot): Use it.
	(Pdumpfs::Pdumpfs::recursive_copy): Ditto.
	(Pdumpfs::Pdumpfs::sub_directory?): New method.
	(Pdumpfs::Pdumpfs::start): Use it.
	(File::init): New method. Initialize $KCODE in the method.
	(Pdumpfs::Pdumpfs::same_directory?): New method.
	(Pdumpfs::Pdumpfs::start): Use it.
	(Pdumpfs::Pdumpfs::create_latest_symlink): New method. Suggested
	by Kentaro Fukuchi <fukuchi at megaui.net>
	
	* pdumpfs.in (parse_options): New option: --dry-run (-n).
	(Pdumpfs::Pdumpfs::initialize): New field: @dry_run.
	(Pdumpfs::Pdumpfs::update_file): Simplified.
	(Pdumpfs::Pdumpfs::chown_if_root): New method.
	(Pdumpfs::Pdumpfs::detect_type): Ditto.
	(wprintf): Renamed from eprintf.